--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: short_navigation
-description: "A new Flutter package project."
+description: "This package built to navigate between screens (routes) without using context (BuildContext)."
 version: 0.0.1
-homepage:
+homepage: https://github.com/MohammadBahlaq/short_navigation.git
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -14,7 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
